// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StudioViewSteps /> render with steps 1`] = `
<Collapsible
  onToggle={[MockFunction toggleAssessmentSteps]}
  open={true}
  title={
    <h3
      className="py-3"
    >
      Assessment steps
    </h3>
  }
>
  <div>
    <p
      key="self"
    >
      <strong>
        Step
         
        1
        : 
      </strong>
      <span>
        Self assessment
      </span>
    </p>
    <p
      key="peer"
    >
      <strong>
        Step
         
        2
        : 
      </strong>
      <span>
        Peer assessment
      </span>
    </p>
  </div>
</Collapsible>
`;

exports[`<StudioViewSteps /> render without steps 1`] = `
<Collapsible
  onToggle={[MockFunction toggleAssessmentSteps]}
  open={true}
  title={
    <h3
      className="py-3"
    >
      Assessment steps
    </h3>
  }
>
  <div />
</Collapsible>
`;
